# Breeze

./: .gitignore  Cargo.toml  README.md  nixpacks.toml
.github/workflows/: backend-deploy.yml  blog-deploy.yml  blog-web-deploy.yml
breeze-web/: .gitignore  Cargo.toml  Trunk.toml  base.html  index.html  post.html
breeze-web/src/: components.rs  main.rs
breeze-web/src/api/: api.rs
breeze-web/src/components/: footer.rs  header.rs  index.rs  mod.rs  post.rs
breeze-web/src/pages/: mod.rs  page.rs
breeze-web/src/router/: mod.rs  router.rs
docs/: all_in_rust.excalidraw
model/: Cargo.toml
model/src/: post.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/errors/: error.rs
server/src/model/: post.rs
server/src/services/: list_post.rs  mod.rs  post.rs
static-generate/: Cargo.toml
static-generate/src/: main.rs
static-generate/src/generate/: generator.rs  mod.rs
static-generate/template/Aragaki/: base.hbs  index.hbs
