[package]
name = "breeze-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
model = { path = "../model" }
serde = { version = "1.0.152", features = ["derive"] }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive"] }
serde_json = "1.0.93"
yew-hooks = "0.2.0"
